--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.2",
     "axios": "^0.21.0",
+    "babel-plugin-import": "^1.13.1",
     "core-js": "^3.6.5",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
