--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^0.21.0",
     "babel-plugin-import": "^1.13.1",
     "core-js": "^3.6.5",
+    "element-ui": "^2.14.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
