--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.14.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
+    "lodash": "^4.17.20",
     "nprogress": "^0.2.0",
     "router": "^1.3.5",
     "vue": "^2.6.11",
